fix visiblity issue

--- a/client/app/weather/weather.component.scss
+++ b/client/app/weather/weather.component.scss
@@ -11,6 +11,7 @@ $blur-factor: 0.5rem;
 
 @keyframes hide-anim {
   0% {
+    visibility: visible;
   }
   100% {
     visibility: hidden;
@@ -60,12 +61,11 @@ $blur-factor: 0.5rem;
 
 .fade-in {
   transition: opacity 2s ease-in-out 0s;
-  animation: 2s ease-out 0s 1 hide-anim;
   opacity: 0;
 }
 
 .show-loading {
-  animation: 0.5s ease-out 0s 1 semi-fade-in;
+  animation: 0.5s ease-out 0s 1 semi-fade-in, 2s ease-out 0s 1 hide-anim;
   opacity: 0.7;
   transition: opacity 1s ease-in-out 0s;
 }
